[gd_scene load_steps=10 format=2]

[ext_resource path="res://popups/Options.gd" type="Script" id=1]
[ext_resource path="res://fonts/MidFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/BigFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://popups/ActionRemapButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/good times rg.otf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = SubResource( 1 )

[sub_resource type="GDScript" id=5]
script/source = "extends Control

func _ready():
	pass

#Get all KeyPersistence.keymaps
#and fill an array of actionremaprow with the apropiate names(?????)
"

[sub_resource type="ButtonGroup" id=4]

[node name="Options" type="Control"]
margin_left = -6.10352e-05
margin_top = 0.00671387
margin_right = 1920.0
margin_bottom = 1079.99
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -592.0
margin_top = 72.0
margin_right = 592.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
text = "OPTIONS"
align = 1
valign = 1

[node name="MenuBox" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = -742.983
margin_right = 656.0
margin_bottom = -73.9833

[node name="Music_Label" type="Label" parent="MenuBox"]
margin_right = 496.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = SubResource( 3 )
text = "Music Volumen"
valign = 2

[node name="Music" type="HSlider" parent="MenuBox"]
margin_top = 52.0
margin_right = 496.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
focus_neighbour_top = NodePath("../Back")
focus_neighbour_bottom = NodePath("../FX")
focus_next = NodePath("../FX")
focus_previous = NodePath("../Back")
max_value = 1.0
step = 0.1

[node name="FX_Label" type="Label" parent="MenuBox"]
margin_top = 104.0
margin_right = 496.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 48 )
custom_fonts/font = SubResource( 3 )
text = "FX Volumen"
valign = 2

[node name="FX" type="HSlider" parent="MenuBox"]
margin_top = 156.0
margin_right = 496.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 48 )
focus_neighbour_top = NodePath("../Music")
focus_neighbour_bottom = NodePath("../Resolution")
focus_next = NodePath("../Resolution")
focus_previous = NodePath("../Music")
max_value = 1.0
step = 0.1

[node name="Separator" type="Control" parent="MenuBox"]
margin_top = 208.0
margin_right = 496.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 100 )

[node name="ColorRect" type="ColorRect" parent="MenuBox/Separator"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 0, 2 )

[node name="Resolution" type="OptionButton" parent="MenuBox"]
margin_top = 312.0
margin_right = 496.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 48 )
focus_neighbour_top = NodePath("../FX")
focus_neighbour_bottom = NodePath("../FullScreen")
focus_next = NodePath("../FullScreen")
focus_previous = NodePath("../FX")
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
align = 1

[node name="FullScreen" type="CheckBox" parent="MenuBox"]
margin_top = 364.0
margin_right = 496.0
margin_bottom = 412.0
rect_min_size = Vector2( 0, 48 )
focus_neighbour_top = NodePath("../Resolution")
focus_neighbour_bottom = NodePath("../Back")
focus_next = NodePath("../Back")
focus_previous = NodePath("../Resolution")
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Full Screen"
align = 1

[node name="Separator2" type="Control" parent="MenuBox"]
margin_top = 416.0
margin_right = 496.0
margin_bottom = 516.0
rect_min_size = Vector2( 0, 100 )

[node name="ColorRect" type="ColorRect" parent="MenuBox/Separator2"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
rect_min_size = Vector2( 0, 2 )

[node name="Back" type="Button" parent="MenuBox"]
margin_top = 620.0
margin_right = 496.0
margin_bottom = 668.0
rect_min_size = Vector2( 0, 48 )
focus_neighbour_top = NodePath("../FullScreen")
focus_neighbour_bottom = NodePath("../Music")
focus_next = NodePath("../Music")
focus_previous = NodePath("../FullScreen")
size_flags_vertical = 10
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="ControlBinding" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1086.0
margin_top = -232.992
margin_right = -113.0
margin_bottom = 477.008

[node name="InputRemapMenu" type="VBoxContainer" parent="ControlBinding"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
script = SubResource( 5 )

[node name="Instructions" type="Label" parent="ControlBinding/InputRemapMenu"]
margin_left = 37.0
margin_right = 937.0
margin_bottom = 81.0
rect_min_size = Vector2( 900, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Click on a button to reassign its action key."
align = 1
autowrap = true

[node name="RemapButtonGroup" type="Button" parent="ControlBinding/InputRemapMenu"]
margin_top = 222.0
margin_right = 974.0
margin_bottom = 572.0
rect_min_size = Vector2( 500, 350 )
size_flags_vertical = 6
disabled = true
group = SubResource( 4 )
flat = true

[node name="ActionsList" type="VBoxContainer" parent="ControlBinding/InputRemapMenu/RemapButtonGroup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -140.0
margin_right = 228.0
margin_bottom = 140.0

[node name="ActionRemapRow" type="HBoxContainer" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList"]
margin_right = 456.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow"]
margin_right = 226.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Move Left"
align = 1
valign = 1

[node name="RemapButton" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
group = SubResource( 4 )
action = "ui_left"

[node name="ActionRemapRow2" type="HBoxContainer" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList"]
margin_top = 56.0
margin_right = 456.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow2"]
margin_right = 226.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Move Right"
align = 1
valign = 1

[node name="RemapButton" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow2" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
group = SubResource( 4 )
action = "ui_right"

[node name="ActionRemapRow3" type="HBoxContainer" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList"]
margin_top = 113.0
margin_right = 456.0
margin_bottom = 166.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow3"]
margin_right = 226.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Look Up"
align = 1
valign = 1

[node name="RemapButton" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow3" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
group = SubResource( 4 )

[node name="ActionRemapRow4" type="HBoxContainer" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList"]
margin_top = 170.0
margin_right = 456.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow4"]
margin_right = 226.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Move Down"
align = 1
valign = 1

[node name="RemapButton" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow4" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
group = SubResource( 4 )
action = "ui_down"

[node name="ActionRemapRow5" type="HBoxContainer" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList"]
margin_top = 227.0
margin_right = 456.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActionName" type="Label" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow5"]
margin_right = 226.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "select"
align = 1
valign = 1

[node name="RemapButton" parent="ControlBinding/InputRemapMenu/RemapButtonGroup/ActionsList/ActionRemapRow5" instance=ExtResource( 4 )]
margin_left = 230.0
margin_right = 456.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
group = SubResource( 4 )
action = "ui_select"

[connection signal="value_changed" from="MenuBox/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="MenuBox/FX" to="." method="_on_FX_value_changed"]
[connection signal="item_selected" from="MenuBox/Resolution" to="." method="_on_Resolution_item_selected"]
[connection signal="pressed" from="MenuBox/FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="MenuBox/Back" to="." method="_on_Back_pressed"]
